small fixes in presentation

--- a/Thesis/Solution_P3_Group_02.tex
+++ b/Thesis/Solution_P3_Group_02.tex
@@ -50,7 +50,8 @@
 %##########################################################
 
 %opening
-\title{Programming Project 03}
+%\title{Programming Project 03}
+\title{Work in Progress, NOT YET FINISHED}
 \author{Francel Lamprecht, Christine Robinson, Regina Wehler}
 \date{Winter Semester 2018/19}
 
