--- a/Thesis/ref.bib
+++ b/Thesis/ref.bib
@@ -32,6 +32,7 @@ Supplementary data are available at Bioinformatics online.},
  author = {Ferreira, T. and Rasband, W.},
  year = {2012},
  title = {{ImageJ User Guide: IJ 1.42r}},
+ publisher = {ImageJ Documentation},
  url = {https://books.google.de/books?id=JgAcmQEACAAJ}
 }
 
@@ -131,3 +132,12 @@ Scientific imaging benefits from open-source programs that advance new method de
 }
 
 
+@article{Adams.2018,
+ author = {Adams, Tim and Dörpinghaus, Jens and Jacobs, Marc and Steinhage, Volker},
+ year = {2018},
+ title = {{Automated lung tumor detection and diagnosis in CT Scans using feature analysis and SVM}},
+ pages = {13--20},
+ volume = {17},
+ journal = {{Communication Papers of the 2018 Federated Conference on Computer Science and Information Systems}},
+ doi = {10.15439/2018F176}
+ }
