--- a/Thesis/Solution_P3_Group_02.tex
+++ b/Thesis/Solution_P3_Group_02.tex
@@ -64,11 +64,19 @@
 \section{Introduction}
 Plant phenotyping is a research  area in the plant sciences that focuses on the quantitative measurement of both functional and structural properties of plants. The main bottleneck in plant research and breeding is the phenotyping capability. During the last decade plant phenotyping evolved to non-destructive, image-analysis-based phenotyping, which when requires allows for the tracking of plant development over a given time. This computer driven approach allows the characterization of plants in a high-throughput manner \citep{Walter.2015}.
 
-The recognition of objects, based on image analysis, consists of four sub-problems \citep{Adams.2018}: \par
-1) \textbf{Preprocessing} - Digital images are prone to noise and undesired artifacts, which can be removed by sensible preprocessing. \par
-2) \textbf{Segmentation} - A crucial step to ensure successful classification. Segmentation is used to assign a label to each pixel in an image, so that pixels with the same label will possess shared characteristics. \par
-3) \textbf{Feature Extraction} - Algorithms that will extract selected features from an image is applied during feature extraction. \par
-4)\textbf{Classification} - Each region identified by the feature extraction algorithm is evaluated for its characteristics. Based on the the classifier rating, the image areas may be assined to  a positive or negative class. By using clustering these class assignments can be achieved automatically. \par
+The recognition of objects, based on image analysis, consists of four sub-problems \citep{Adams.2018}: 
+\begin{enumerate}
+\item \textbf{Preprocessing:} Digital images are prone to noise and undesired artifacts, which can be removed by sensible preprocessing. 
+\item \textbf{Segmentation:}  A crucial step to ensure successful classification. Segmentation is used to assign a label to each pixel in an image, so that pixels with the same label will possess shared characteristics. 
+\item \textbf{Feature Extraction:}  Algorithms that will extract selected features from an image is applied during feature extraction. 
+\item \textbf{Classification:}  Each region identified by the feature extraction algorithm is evaluated for its characteristics. Based on the the classifier rating, the image areas may be assined to  a positive or negative class. By using clustering these class assignments can be achieved automatically. 
+\end{enumerate}
+
+%\par
+%1) \textbf{Preprocessing} - Digital images are prone to noise and undesired artifacts, which can be removed by sensible preprocessing. \par
+%2) \textbf{Segmentation} - A crucial step to ensure successful classification. Segmentation is used to assign a label to each pixel in an image, so that pixels with the same label will possess shared characteristics. \par
+%3) \textbf{Feature Extraction} - Algorithms that will extract selected features from an image is applied during feature extraction. \par
+%4)\textbf{Classification} - Each region identified by the feature extraction algorithm is evaluated for its characteristics. Based on the the classifier rating, the image areas may be assined to  a positive or negative class. By using clustering these class assignments can be achieved automatically. \par
 
 The focus of this plant phenotyping research project was on the processing, segmentation and classification of \textit{A.~thaliana}, to gain valuable insight on how the image-analysis-based phenotyping in the life sciences works. \textit{A.~thaliana} is often used as a model plant, as the plant is small in size, with a rapid life cycle of about six weeks \citep{Koornneef.2010}. 
 
@@ -169,20 +177,22 @@ For this study, datasets of the Leaf Segmentation and Counting Challenges were u
 
 \section{Results}
 
-\subsection{Comparison of A1 and A2 datasets}
+%\subsection{Comparison of A1 and A2 datasets}
 %TODO should we skip this?
-\begin{figure}
-	\centering
-	\subfloat[A1 Dataset]{\includegraphics[width=.45\textwidth]{pic/A1-size}}
-	\qquad
-	\subfloat[A2 Dataset]{\includegraphics[width=.45\textwidth]{pic/A2-size}}
-	\caption{XXX}
-	\label{fig:A1-A2-size}
-\end{figure}
+%\begin{figure}
+%	\centering
+%	\subfloat[A1 Dataset]{\includegraphics[width=.45\textwidth]{pic/A1-size}}
+%	\qquad
+%	\subfloat[A2 Dataset]{\includegraphics[width=.45\textwidth]{pic/A2-size}}
+%	\caption{Distribution of plant size in Dataset A1 and Dataset A2}
+%	\label{fig:A1-A2-size}
+%\end{figure}
 
 \subsection{Comparison of leaf count to ground truth for the A1 and A2 datasets}
 
-\begin{figure}
+Using tabular ground truth data supplied with the raw images, we compared our leaf count per plant to the ground truth. For dataset A2, we achieved a root mean squared error of 2.74, while for dataset A1, the error was 6.72. See Figure \ref{fig:truth}. The A1 dataset contained many plants with a mossy background. Our watershed segmentation was based on brightness of the green color channel, so it was unsuccessful in segmenting leaves from background moss. This accounts for our high error on the A1 dataset. Accordingly, in our analysis below, we focus our attention on the A2 dataset.
+
+\begin{figure}[h!]
 	\subfloat[A1 Dataset]{\includegraphics[scale=.5]{pic/A1-truth}}
 	\qquad
 	\subfloat[A2 Dataset]{\includegraphics[scale=.5]{pic/A2-truth}}
@@ -193,15 +203,22 @@ For this study, datasets of the Leaf Segmentation and Counting Challenges were u
 
 \subsection{Overview of the A2 dataset}
 
-\begin{figure}
+To identify pairwise correlations between variables, we generated a scatterplot matrix for the variables plant size, leaf roundness, average green brightness, feret ratio, and width to height ratio. Visual inspection indicated a linear correlation between roundness and feret ratio. This is unsurprising, since each feature measures object roundness, albeit in different ways. 
+
+ 
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=13cm]{pic/overview}
 	\caption{Overview of pairwise correlations between the features size, roundness, average green brightness, feret-ratio, and width-to-height-ratio in the 2014 datasets shown in a pairplot matrix.}
 	\label{fig:overview}
 \end{figure}
 
+
 \subsection{Analyses of correlations}
-\begin{figure}
+
+Computation of Pearson correlation coefficients for several variables reinforced our visual inspection. We found low correlation between size and roundness, and between size and color. By contrast, the number of leaves correlates highly with the total plant area. In particular, this correlation is not linear, but appears perhaps quadratic. This aligns with prior biological knowledge: a plant tends to sprout many small leaves early, which then grow in area over time.
+
+\begin{figure}[h!]
 	\centering
 	\subfloat[Size vs. Roundness]{\includegraphics[width=.45\textwidth]{pic/size-roundness}}
 	\qquad
@@ -212,14 +229,14 @@ For this study, datasets of the Leaf Segmentation and Counting Challenges were u
 	\label{fig:corr}
 \end{figure}
 
-- Correlation of leaf size and roundness
-- Correlation of leaf size and color
-- Correlation of leaf number and total plant area
+%- Correlation of leaf size and roundness
+%- Correlation of leaf size and color
+%- Correlation of leaf number and total plant area
 
 
 \section{Discussion}
 \subsection{Challenges in the Identification of Plants}
-In the here suggested pipeline, the image was first segmented into plant and background using a trainable WEKA segmentation. The quality of the classification was depending on two parameters: the selection of images and the number of images and amount of pixel traces used for training. The more images and the more pixels used for training of the classifier, the larger will be the file size and the longer it will take to read in the file and to apply the classifier to images. Thus, a balance was required between number of labeled pixels and classification accuracy because with increasing number of labeled pixels the execution of the program requires more time. A compromise between a sufficient training subset and a reasonable file size was found by using six images (three of each dataset). In general, a diverse subset of images should be selected for training. During implementation, several subsets were considered. First, the training set contained an image with a mossy plant pot and the classifier was trained to recognize moss as background. It was not possible to successfully train the classifier with that training set. Either the moss was still recognized as plant or the moss was recognized as background but also substantial parts of plants were classified as background. Therefore, it was decided to focus on a sufficiently well classification of plants and the classifier was trained with a subset that contained images with red and black background, with or without water, with red marker tape, with small and big plants and with overlapping neighboring plants but not with moss.
+In the pipeline suggested here, the image was first segmented into plant and background using a trainable WEKA segmentation. The quality of the classification was depending on two parameters: the selection of images and the number of images and amount of pixel traces used for training. The more images and the more pixels used for training of the classifier, the larger will be the file size and the longer it will take to read in the file and to apply the classifier to images. Thus, a balance was required between number of labeled pixels and classification accuracy because with increasing number of labeled pixels the execution of the program requires more time. A compromise between a sufficient training subset and a reasonable file size was found by using six images (three of each dataset). In general, a diverse subset of images should be selected for training. During implementation, several subsets were considered. First, the training set contained an image with a mossy plant pot and the classifier was trained to recognize moss as background. It was not possible to successfully train the classifier with that training set. Either the moss was still recognized as plant or the moss was recognized as background but also substantial parts of plants were classified as background. Therefore, it was decided to focus on a sufficiently well classification of plants and the classifier was trained with a subset that contained images with red and black background, with or without water, with red marker tape, with small and big plants and with overlapping neighboring plants but not with moss.
 
 In this pipeline, outliers were removed using a median filter with a radius of 6 pixels. With this approach, outliers were successfully removed but the A2 dataset also contained some very small plants that got lost in this step. 
 
@@ -231,11 +248,9 @@ In  the Fiji Results Table, circularity and roundness are two similar measuremen
 After calculating both the width to height ratio and the Feret ratio for each leaf, it was found that although the two ratio's did render corresponding values in some instances, there were other instances where the ratio values differed significantly. Manual calculations were done (measuring the length and width of a leaf on-screen with a ruler) and it was found that in the cases where there was a difference between the ratios, the Feret ratio was more accurate. The reason is that the bounding rectangle is not turned by Fiji according to the leaf's position, instead the bounding rectangle remains parallel to the image border and is thus in certain cases a rough estimate of the approximate height and width. As previously discussed in the methodology section, the Feret's ratio is calculated from exact measurements and therefore leads to more precise results. 
 
 \subsection{Quality of the analysis of the A1 dataset}
-- bad quality --> high deviation from ground truth, see fig:moss for example
 
-- caused by unappropriate classifier in the first step
+As mentioned previously, our analysis of the A1 dataset was poor, as measured by deviation of number of objects from the ground truth count. This can be attributed to our choice of classifier in the first step of the pipeline. We used a Weka segmentation based on brightness. This was not able to distinguish bright pixels belonging to plant from bright pixels belonging to moss. See Figure \ref{fig:moss} for example. It would have been better to take other features, like granularity, into account. 
 
-- overcome this with classifier that takes other features e.g. granularity into account 
 
 \begin{figure}
 	\centering
@@ -245,9 +260,9 @@ After calculating both the width to height ratio and the Feret ratio for each le
 \end{figure}
 
 \section{Conclusion}
-The project's goal was met in that we did successfully implement a simple and naïve approach towards plant classification by using top view photos. By applying Trainable Weka Segmentation, with a FastRandomForest classifier, a plant was seperated from its background in simple cases. Leaf seperation and subsequent analysis of individual leaves were carried out successfully. 
+The project's goal was met in that we did successfully implement a simple and naïve approach towards plant classification by using top view photos. By applying Trainable Weka Segmentation, with a FastRandomForest classifier, a plant was separated from its background in simple cases. Leaf separation and subsequent analysis of individual leaves were carried out successfully. 
 
-Through the application of various statistical functions in-depth analysis were performed and it was found that the FastRandomForest classifier (used with standard Fiji settings) was not able to successfully distinguish between leaves belonging to the plant and moss surrounding the plants. We concluded that this inabiltity of the classifier was due the classifier basing classification mostly on color. 
+Through the application of various statistical functions in-depth analysis were performed and it was found that the FastRandomForest classifier (used with standard Fiji settings) was not able to successfully distinguish between leaves belonging to the plant and moss surrounding the plants. We concluded that this inabillity of the classifier was due the classifier basing classification mostly on color. 
 
 To improve the performance of our classifier on the A1, mossy, dataset we suggest to in future make use of different hyperparameters, that can for example differentiate based on coarseness, as plant leaves have smoother appearance than moss. More detailed and sensible preprocessing to distinguish the moss as noise can be another viable option to consider in order to improve the classifier's accuracy.
 
