--- a/Thesis/Solution_P3_Group_02.tex
+++ b/Thesis/Solution_P3_Group_02.tex
@@ -1,7 +1,7 @@
 \documentclass[paper=A4,bibliography=totocnumbered]{scrartcl}
 \setkomafont{disposition}{\normalcolor\bfseries} %in KOMA headings are default sans serif, with this patch with serifs see scrguide.pdf, 2010-09-14, page 108
 \usepackage[dvipsnames]{xcolor}
-%\usepackage[latin1]{inputenc} % correct coding for windows e.g. with umlauts  ..... did not work with ö and è
+\usepackage[utf8]{inputenc} % correct coding for windows e.g. with umlauts
 \usepackage[T1]{fontenc}
 \usepackage{paralist} % compactenum and compactitem
 \usepackage[pdftex]{graphicx} % required to insert figures
@@ -12,7 +12,6 @@
 \usepackage[round]{natbib} % http://merkel.zoneo.net/Latex/natbib.php for author-year citation with round brackets
 \usepackage{vmargin} % for margins, especially bottommargin smaller, alternative to DIV=12
 \setmarginsrb{35mm}{20mm}{25mm}{15mm}{12pt}{11mm}{0pt}{11mm}
-\usepackage[utf8]{inputenc} %correct coding for windows umlauts... now working with ö and è
 
 % math packages
 \usepackage{amsmath}
@@ -62,7 +61,8 @@
 \tableofcontents
 \clearpage
 \section{Introduction}
-Plant phenotyping is a research  area in the plant sciences that focuses on the quantitative measurement of both functional and structural properties of plants. The main bottleneck in plant research and breeding is the phenotyping capability. During the last decade plant phenotyping evolved to non-destructive, image-analysis-based phenotyping, which when requires allows for the tracking of plant development over a given time. This computer driven approach allows the characterization of plants in a high-throughput manner \citep{Walter.2015}.
+%TODO
+Plant phenotyping is a research  area in the plant sciences that focuses on the quantitative measurement of both functional and structural properties of plants. The main bottleneck in plant research and breeding is the phenotyping capability. During the last decade plant phenotyping evolved to non-destructive, image-analysis-based phenotyping, which then allows for the tracking of plant development over a given time. This computer driven approach allows the characterization of plants in a high-throughput manner \citep{Walter.2015}.
 
 The recognition of objects, based on image analysis, consists of four sub-problems \citep{Adams.2018}: 
 \begin{enumerate}
@@ -71,12 +71,6 @@ The recognition of objects, based on image analysis, consists of four sub-proble
 \item \textbf{Feature Extraction:}  Algorithms that will extract selected features from an image is applied during feature extraction. 
 \item \textbf{Classification:}  Each region identified by the feature extraction algorithm is evaluated for its characteristics. Based on the the classifier rating, the image areas may be assined to  a positive or negative class. By using clustering these class assignments can be achieved automatically. 
 \end{enumerate}
-
-%\par
-%1) \textbf{Preprocessing} - Digital images are prone to noise and undesired artifacts, which can be removed by sensible preprocessing. \par
-%2) \textbf{Segmentation} - A crucial step to ensure successful classification. Segmentation is used to assign a label to each pixel in an image, so that pixels with the same label will possess shared characteristics. \par
-%3) \textbf{Feature Extraction} - Algorithms that will extract selected features from an image is applied during feature extraction. \par
-%4)\textbf{Classification} - Each region identified by the feature extraction algorithm is evaluated for its characteristics. Based on the the classifier rating, the image areas may be assined to  a positive or negative class. By using clustering these class assignments can be achieved automatically. \par
 
 The focus of this plant phenotyping research project was on the processing, segmentation and classification of \textit{A.~thaliana}, to gain valuable insight on how the image-analysis-based phenotyping in the life sciences works. \textit{A.~thaliana} is often used as a model plant, as the plant is small in size, with a rapid life cycle of about six weeks \citep{Koornneef.2010}. 
 
@@ -122,10 +116,10 @@ The plant is separated from the background with the help of a trainable Weka seg
 	\label{tab:weka}
 \end{table}
 
-\subsection{Objects Recognition}
+\subsection{Objects recognition}
 A plant consists of leaves that are attached to each other. To be able to analyze leaves individually, they need to be separated. Here, the watershed algorithm was used to separate touching objects. Its implementation in Fiji is based on the algorithm described by \citet{Kunt.1990}. The algorithm first calculates an Euclidean distance map and determines center points as points which are, from a topological view, the ultimate eroded points, As the algorithm's name indicates, this topological map is "flooded" with water and at each collision of two "watersheds", a line separating two objects is drawn. Before watershed was applied, outliers were removed in both classes of the binary image by using the Fiji remove outliers function separately on each class. This function uses a median filter, for which the pixel radius was set to 6 and the threshold was set to 50. The output of the watershed algorithm is the binary image with added watershed lines (figure \ref{fig:pipeline}-c). 
 
-\subsection{Object Analysis}
+\subsection{Object analysis}
 After an image was subjected to the aforementioned steps, the resulting watershed image was then analyzed using Fiji's Analyze Particles tool. The measurements that were selected to be performed during the particle analysis are:
 
 \begin{compactitem}
@@ -169,42 +163,26 @@ An additional requirement of the project was to include the width to height rati
 
 The Feret Ratio was additionally calculated from the minimum caliper diameter (MinFeret) and the maximum caliper (MaxFeret) values. These values are calculated as part of the Feret's diameter measurements. The ratio was calculated, by dividing MinFeret by MaxFeret, as another approach to get a width to height ratio overview for each leaf.
 
-\subsection{Explorative Data Analysis}
+\subsection{Explorative data analysis}
 Data analysis was conducted in Jupyter Notebooks using several Python packages. Data were handled with the python package pandas. For visual statistical analysis, the seaborn package was used. Numerical statistical analysis was mainly performed using the stats module from the python package scipy. For general plotting of graphs, the pyplot module from the python package matplotlib was used.
 
 \subsection{Data}
 For this study, datasets of the Leaf Segmentation and Counting Challenges were used \citep{Minervini.2016}. The imaging data were manually annotated to provide ground truth information \citep{Scharr.2014}. The datasets contain images of greenhouse images with \textit{A.~thaliana} and \textit{N.~tabacum}. \textit{A.~thaliana} is a rosette plant, with the individual leaves being on separate, distinguishable stems. This characteristic of \textit{A.~thaliana} makes leaf separation from each other less complex.  Given that we were only exploring viable methods in this research area, \textit{A.~thaliana} was our chosen plant, as it gave us the opportunity to explore with different algorithms in an easier way than what the \textit{N.~tabacum} dataset would have allowed us to do. Since the datasets for 2014, 2015 and 2017 are nearly the same, only differing in the amount of provided meta data, datasets from a single year were used for analysis. 
 
 \section{Results}
-
-%\subsection{Comparison of A1 and A2 datasets}
-%TODO should we skip this?
-%\begin{figure}
-%	\centering
-%	\subfloat[A1 Dataset]{\includegraphics[width=.45\textwidth]{pic/A1-size}}
-%	\qquad
-%	\subfloat[A2 Dataset]{\includegraphics[width=.45\textwidth]{pic/A2-size}}
-%	\caption{Distribution of plant size in Dataset A1 and Dataset A2}
-%	\label{fig:A1-A2-size}
-%\end{figure}
-
 \subsection{Comparison of leaf count to ground truth for the A1 and A2 datasets}
-
-Using tabular ground truth data supplied with the raw images, we compared our leaf count per plant to the ground truth. For dataset A2, we achieved a root mean squared error of 2.74, while for dataset A1, the error was 6.72. See Figure \ref{fig:truth}. The A1 dataset contained many plants with a mossy background. Our watershed segmentation was based on brightness of the green color channel, so it was unsuccessful in segmenting leaves from background moss. This accounts for our high error on the A1 dataset. Accordingly, in our analysis below, we focus our attention on the A2 dataset.
+The rgb images from datasets A1 and A2 were analyzed with the previously described pipeline. Using tabular ground truth data supplied with the raw images, the output leaf count per plant was compared to the ground truth. The difference between ground truth and count was plotted for each image (figure \ref{fig:truth}). The largest difference in A1 were -21 leaves and in A2 6 leaves. For dataset A2, a root mean squared error of 2.74 was achieved, while for dataset A1, the error was 6.72. Since the results for the A1 dataset exhibited a huge deviation from ground truth, all further analyses were only done with the results from the A2 dataset.
 
 \begin{figure}[h!]
-	\subfloat[A1 Dataset]{\includegraphics[scale=.5]{pic/A1-truth}}
+	\subfloat[A1 Dataset]{\includegraphics[scale=.6]{pic/A1-truth}}
 	\qquad
 	\subfloat[A2 Dataset]{\includegraphics[scale=.5]{pic/A2-truth}}
-	\caption{Comparison of the leaf count to ground truth. The ground truth was determined by manually annotation of images \citep{Scharr.2014}. The output of our approach for every single image was subtracted from the ground truth and plotted.}
+	\caption{Comparison of the leaf count to ground truth. The ground truth was determined by manually annotation of images \citep{Scharr.2014}. The output of this approach for every single image was subtracted from the ground truth and plotted.}
 	\label{fig:truth}
 \end{figure}
 
-
 \subsection{Overview of the A2 dataset}
-
-To identify pairwise correlations between variables, we generated a scatterplot matrix for the variables plant size, leaf roundness, average green brightness, feret ratio, and width to height ratio. Visual inspection indicated a linear correlation between roundness and feret ratio. This is unsurprising, since each feature measures object roundness, albeit in different ways. 
-
+To identify pairwise correlations between variables, a scatterplot matrix was plotted for the variables plant size, leaf roundness, average green brightness, feret ratio, and width to height ratio. Visual inspection indicated a linear correlation between roundness and feret ratio. 
  
 \begin{figure}[h]
 	\centering
@@ -213,10 +191,8 @@ To identify pairwise correlations between variables, we generated a scatterplot 
 	\label{fig:overview}
 \end{figure}
 
-
 \subsection{Analyses of correlations}
-
-Computation of Pearson correlation coefficients for several variables reinforced our visual inspection. We found low correlation between size and roundness, and between size and color. By contrast, the number of leaves correlates highly with the total plant area. In particular, this correlation is not linear, but appears perhaps quadratic. This aligns with prior biological knowledge: a plant tends to sprout many small leaves early, which then grow in area over time.
+Computation of Pearson correlation coefficients for several variables reinforced the previous visual inspection. Low correlation between size and roundness (pearson -0.23), and between size and color (pearson 0.18) were found (figure \ref{fig:corr}-A and -B). By contrast, the number of leaves correlated highly with the total plant area (pearson 0.86, \ref{fig:corr}-C). In particular, this correlation is not linear, but appears perhaps quadratic. Therefore, Spearman's rank correlation coefficient was calculated and the result was 0.94, indicating a high correlation. 
 
 \begin{figure}[h!]
 	\centering
@@ -225,17 +201,12 @@ Computation of Pearson correlation coefficients for several variables reinforced
 	\subfloat[Size vs. Color]{\includegraphics[width=.45\textwidth]{pic/size-color}}
 	\qquad
 	\subfloat[Number of Leaves vs. Total Area]{\includegraphics[width=.45\textwidth]{pic/number-area}}
-	\caption{Analyses of correlations shown in pairwise scatter plots with histograms along the x- and y-axes and pearson correlation coefficients.}
+	\caption{Analyses of correlations shown in pairwise scatter plots with histograms along the x- and y-axes and Pearson correlation coefficients.}
 	\label{fig:corr}
 \end{figure}
 
-%- Correlation of leaf size and roundness
-%- Correlation of leaf size and color
-%- Correlation of leaf number and total plant area
-
-
 \section{Discussion}
-\subsection{Challenges in the Identification of Plants}
+\subsection{Challenges in the identification of plants}
 In the pipeline suggested here, the image was first segmented into plant and background using a trainable WEKA segmentation. The quality of the classification was depending on two parameters: the selection of images and the number of images and amount of pixel traces used for training. The more images and the more pixels used for training of the classifier, the larger will be the file size and the longer it will take to read in the file and to apply the classifier to images. Thus, a balance was required between number of labeled pixels and classification accuracy because with increasing number of labeled pixels the execution of the program requires more time. A compromise between a sufficient training subset and a reasonable file size was found by using six images (three of each dataset). In general, a diverse subset of images should be selected for training. During implementation, several subsets were considered. First, the training set contained an image with a mossy plant pot and the classifier was trained to recognize moss as background. It was not possible to successfully train the classifier with that training set. Either the moss was still recognized as plant or the moss was recognized as background but also substantial parts of plants were classified as background. Therefore, it was decided to focus on a sufficiently well classification of plants and the classifier was trained with a subset that contained images with red and black background, with or without water, with red marker tape, with small and big plants and with overlapping neighboring plants but not with moss.
 
 In this pipeline, outliers were removed using a median filter with a radius of 6 pixels. With this approach, outliers were successfully removed but the A2 dataset also contained some very small plants that got lost in this step. 
@@ -248,9 +219,8 @@ In  the Fiji Results Table, circularity and roundness are two similar measuremen
 After calculating both the width to height ratio and the Feret ratio for each leaf, it was found that although the two ratio's did render corresponding values in some instances, there were other instances where the ratio values differed significantly. Manual calculations were done (measuring the length and width of a leaf on-screen with a ruler) and it was found that in the cases where there was a difference between the ratios, the Feret ratio was more accurate. The reason is that the bounding rectangle is not turned by Fiji according to the leaf's position, instead the bounding rectangle remains parallel to the image border and is thus in certain cases a rough estimate of the approximate height and width. As previously discussed in the methodology section, the Feret's ratio is calculated from exact measurements and therefore leads to more precise results. 
 
 \subsection{Quality of the analysis of the A1 dataset}
-
-As mentioned previously, our analysis of the A1 dataset was poor, as measured by deviation of number of objects from the ground truth count. This can be attributed to our choice of classifier in the first step of the pipeline. We used a Weka segmentation based on brightness. This was not able to distinguish bright pixels belonging to plant from bright pixels belonging to moss. See Figure \ref{fig:moss} for example. It would have been better to take other features, like granularity, into account. 
-
+The analysis of the A1 dataset showed a huge deviation of number of objects from the ground truth. The largest difference was -21 leaves, so the program identified a lot more as leaves than the image contained. To identify the reason for the misclassification, the output images were visually compared on a sample basis to the ground truth images. Considering the ground truth images, it was found out that mainly mossy parts of plant pots were misidentified as plant area although moss should be identified as background. This can be attributed to the choice of classifier in the first step of the pipeline. It appeared that the used Weka segmentation based mainly on the color of the pixels. The datasets contained plant images with various shades of green. Therefore, the classifier was not able to distinguish bright pixels belonging to plant from bright pixels belonging to moss. A negative classification example can be found in figure \ref{fig:moss}. The lower left quarter of the plant pot did not contain a leave but most of this area was classified as plant. 
+To prevent the misclassification of mossy plant pots, a different approach could be tested, e.g. convolutional neural networks. The above described approach could be improved by taking other features, like granularity, into account.
 
 \begin{figure}
 	\centering
@@ -258,6 +228,11 @@ As mentioned previously, our analysis of the A1 dataset was poor, as measured by
 	\caption{Example of the classification of a mossy plant pot in comparison to ground truth. The moss was mainly incorrectly classified as plant.}
 	\label{fig:moss}
 \end{figure}
+
+\subsection{Correlations in leaf characteristics}
+The determined leaf characteristics were analyzed regarding correlations between pairwise measures. A high correlation between roundness and feret radio was found. This is unsurprising, since each feature measures object roundness, albeit in different ways. 
+
+In addition, a high, non-linear correlation between number of leaves and total plant area was shown in the data. This aligns with prior biological knowledge: a plant tends to sprout many small leaves early, which then grow in area over time.
 
 \section{Conclusion}
 The project's goal was met in that we did successfully implement a simple and naïve approach towards plant classification by using top view photos. By applying Trainable Weka Segmentation, with a FastRandomForest classifier, a plant was separated from its background in simple cases. Leaf separation and subsequent analysis of individual leaves were carried out successfully. 
